--- a/orders.html
+++ b/orders.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="logo.png" type="image/png" sizes="16x16">
     <title>Prisma Menorca S.L.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Font imports-->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Telex" rel="stylesheet">
+    <!--Stylesheets-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@7.32.2/dist/sweetalert2.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+    <!--JavaScript-->
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
@@ -26,6 +28,7 @@
 </head>
 
 <body>
+<!--Navbar-->
     <nav class="navbar navbar-dark navbar-expand-md">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
@@ -46,6 +49,7 @@
             </div>
         </div>
     </nav>
+    <!--Content-->
     <div class="container mt-4 mb-5">
         <div class="row">
             <div class="col-12">
@@ -55,6 +59,7 @@
                 <hr>
             </div>
         </div>
+        <!--Alert-->
         <div class="row">
             <div class="col-12">
                 <div class="alert alert-warning alert-dismissible fade show">
@@ -66,24 +71,25 @@
                 </div>
             </div>
         </div>
+        <!--Form-->
         <div class="row">
             <form id="form" class="w-100">
                 <div class="col-md-6 float-left">
                     <div class="form-group">
                         <label for="name">Nom</label>
-                        <input type="text" class="form-control" id="name" placeholder="Nom">
+                        <input type="text" class="form-control" id="name">
                     </div>
                     <div class="form-group">
                         <label for="surnames">Llinatges</label>
-                        <input type="text" class="form-control" id="surnames" placeholder="Llinatges">
+                        <input type="text" class="form-control" id="surnames">
                     </div>
                     <div class="form-group">
                         <label for="email">Correu electrònic</label>
-                        <input type="email" class="form-control" id="email" placeholder="E-mail">
+                        <input type="email" class="form-control" id="email">
                     </div>
                     <div class="form-group">
                         <label for="phone">Teléfon</label>
-                        <input type="tel" class="form-control" id="phone" placeholder="Teléfon">
+                        <input type="tel" class="form-control" id="phone">
                     </div>
                 </div>
                 <div class="col-md-6 float-right">
