Tryng to fix Git CDN erorr

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Prisma Menorca S.L.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Font imports-->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Telex" rel="stylesheet">
+    <!--Stylesheets-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@7.32.2/dist/sweetalert2.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+    <!--JavaScript-->
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
@@ -25,13 +28,15 @@
 </head>
 
 <body>
+<!--Navbar-->
   <nav class="navbar navbar-dark navbar-expand-md">
     <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand ml-auto" href="#" style="font-family: 'Telex', sans-serif;">
-        <img src="img/logoPrismaWhite.svg" alt="Logo Prisma Menorca" height="40"><span class="align-middle d-none d-sm-inline">PRISMA</span>
+        <img src="img/logoPrismaWhite.svg" alt="Logo Prisma Menorca" height="40">
+        <span class="align-middle d-none d-sm-inline">PRISMA</span>
       </a>
       <div class="collapse navbar-collapse" id="Navbar">
         <ul class="navbar-nav mr-right">
@@ -107,6 +112,7 @@
       </div>
     </div>
     <div class="row mb-5 ml-1 mr-1">
+    <!--Card deck-->
       <div class="card-deck">
         <div class="card">
           <img class="card-img-top img-thumbnail" src="img/oki_printer.jpg" alt="OKI Printer">
@@ -116,7 +122,6 @@
               estalviar fins a un 30% per pàgina impresa!</p>
           </div>
         </div>
-
         <div class="card">
           <img class="card-img-top img-thumbnail" src="img/frontrest.png" alt="TPV with ICG Frontrest">
           <div class="card-body">
@@ -141,6 +146,7 @@
   <footer class="footer mt-5">
     <div class="container">
       <div class="row pt-3 pb-3">
+      <!--Providers-->
         <div class="col-12 col-sm-9 pb-3 pb-sm-0 d-flex justify-content-center flex-wrap">
           <a href="http://www.mrmicro.es/"><img src="img/logo_micro.png" alt="Logo Mr Micro" height="35"></a>
           <a href="http://www.icg.es/"><img src="img/logo_icg.png" alt="Logo ICG" height="35"></a>
@@ -151,7 +157,7 @@
           <a href="https://www.actiu.com/es/"><img src="img/logo_actiu.png" alt="Logo Actiu" height="35"></a>
         </div>
         <!--Social media buttons-->
-        <div class="col-12 col-sm-3 align-self-center">
+        <div class="col-12 col-sm-3">
           <div class="text-center">
             <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/prismamenorca"><i class="fa fa-facebook"></i></a>
             <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
